--- a/.github/workflows/make-package copy.yml
+++ b/.github/workflows/make-package copy.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.USER_PAT }}
       - name: Run version script
         run: ./.github/scripts/generate_version.sh
       - uses: stefanzweifel/git-auto-commit-action@v4
