fix: add check by message

--- a/.github/workflows/make-package copy.yml
+++ b/.github/workflows/make-package copy.yml
@@ -9,7 +9,7 @@ jobs:
   create-version-commit:
     # Do not trigger ourselves because of PAT 
     # https://github.com/stefanzweifel/git-auto-commit-action/issues/237
-    if: github.triggering_actor != 'github-actions[bot]'
+    if: github.event.head_commit.message != 'chore update version json'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -19,11 +19,12 @@ jobs:
         env:
           TEST: ${{github.triggering_actor}}
           TEST2: ${{github.actor}}
-        run: echo $TEST $TEST2
+          PREVIOUS_COMMIT_MESSATE: ${{ github.event.head_commit.message }}
+        run: echo $TEST $TEST2 $PREVIOUS_COMMIT_MESSAGE
       - name: Run version script
         run: ./.github/scripts/generate_version.sh $GITHUB_SHA
       # This is life https://github.com/stefanzweifel/git-auto-commit-action/
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: bump-version
+          commit_message: chore update version json
       
